Attempt to fix image on mobile

--- a/static/css/hciproj.css
+++ b/static/css/hciproj.css
@@ -48,9 +48,10 @@ form {
 }
 
 .bsimg {
+	max-width: 80px;
 	background-repeat: no-repeat;
 	background-position: center;
-	background-size: 300px 300px;
+	background-size: 80px;
   	margin: 20px auto;
   	padding: 50px;
 }
